--- a/themes/solitude/source/css/_page/_home/home-top.styl
+++ b/themes/solitude/source/css/_page/_home/home-top.styl
@@ -253,10 +253,16 @@
   position absolute
   bottom 20px
   left 40px
-  flex-direction column
+  flex-direction column  // 默认竖直排列
   justify-content space-between
-  flex-wrap wrap
+  flex-wrap wrap  // 允许换行
   height 120px
+
+  // 当屏幕宽度小于768px时，变为横向排列
+  @media (max-width: 768px)
+    flex-direction row  // 横向排列
+    gap 10px  // 横向间距
+    height auto  // 高度根据内容自动调整
 
 .banners-link-btn
   display flex
@@ -268,7 +274,7 @@
   color var(--efu-white)
   position relative
   background-size 200%
-  margin-right 10px
+  margin-right 10px  // 按钮间隔
 
   &:hover
     background-position 100% 0
